<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:background="#ffffff"
>
	<ScrollView
		android:id="@+id/ScrollView01"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
	>
		<LinearLayout
			android:id="@+id/LinearLayout01"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
		>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			>
				<ImageView
					android:id="@+id/deletelist_title"
					android:layout_width="fill_parent"
					android:layout_height="80dip"
					android:background="@drawable/dialog_title_add"/>
			</LinearLayout>
			
			<LinearLayout
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:gravity="center"
			android:layout_gravity="center" android:layout_width="fill_parent" android:layout_marginLeft="10dip" android:layout_marginRight="10dip">
				<TableLayout
					android:layout_height="wrap_content"
					android:id="@+id/add_dialog_TableLayout"
					android:layout_marginTop="20dip"
					android:layout_marginBottom="20dip"
					android:layout_width="wrap_content"
					android:layout_marginLeft="5dip"
					android:layout_marginRight="5dip"
				>
					<TableRow
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:gravity="center"
					>
						<TextView
							android:layout_height="wrap_content"
							android:text="@string/categoly"
							android:id="@+id/categoly"
							android:textStyle="bold"
							android:textColor="@color/brown"
							android:typeface="serif"
							android:textSize="16sp"
							android:layout_width="wrap_content"
						></TextView>
						<Spinner
							android:layout_height="wrap_content"
							android:id="@+id/categoly_spinner"
							android:layout_width="wrap_content"
							android:layout_marginLeft="5dip"
						></Spinner>
					</TableRow>
					<TableRow
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:gravity="center"
					>
						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/item_name"
							android:id="@+id/item_name"
							android:textStyle="bold"
							android:textColor="@color/brown"
							android:typeface="serif"
							android:textSize="16sp"
						></TextView>
						<EditText
							android:layout_height="wrap_content"
							android:maxLength="20"
							android:id="@+id/edit_item_name"
							android:inputType="text"
							android:textColor="@color/brown"
							android:typeface="serif"
							android:textSize="16sp"
							android:gravity="center_vertical"
							android:layout_width="wrap_content"
							android:layout_marginLeft="5dip"
						></EditText>
					</TableRow>
				</TableLayout>
				<RadioGroup
					android:layout_height="wrap_content"
					android:id="@+id/icons_RadioGroup"
					android:layout_marginLeft="20dip"
					android:layout_marginRight="20dip"
					android:layout_width="wrap_content"
				>
					<RadioButton
						android:layout_height="wrap_content"
						android:text="@string/select_icons"
						android:checked="true"
						android:id="@+id/icon01"
						android:textColor="@color/brown"
						android:typeface="serif"
						android:textSize="16sp"
						android:layout_width="wrap_content"
					></RadioButton>
					<RadioButton
						android:layout_height="wrap_content"
						android:text="@string/select_galaly"
						android:id="@+id/icon02"
						android:textColor="@color/brown"
						android:typeface="serif"
						android:textSize="16sp"
						android:layout_width="wrap_content"
					></RadioButton>
					<RadioButton
						android:layout_height="wrap_content"
						android:text="@string/camera"
						android:id="@+id/icon03"
						android:textColor="@color/brown"
						android:typeface="serif"
						android:textSize="16sp"
						android:layout_width="wrap_content"
					></RadioButton>
				</RadioGroup>
			</LinearLayout>
			<LinearLayout
				android:id="@+id/MenuButtonLayout"
				android:layout_width="fill_parent"
				android:layout_height="80dip"
				android:weightSum="2"
			>
				<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:gravity="center"
					android:layout_weight="1"
				>
					<ImageButton
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:background="@drawable/d_next_b_stateful"
						android:id="@+id/nextbutton"/>
				</LinearLayout>
				<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:gravity="center"
					android:layout_weight="1"
				>
					<ImageButton
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:background="@drawable/d_cancel_b_stateful"
						android:id="@+id/cancelbutton"/>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>