<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_height="wrap_content"
	android:layout_width="wrap_content"
	android:background="#ffffff"
>
	<ScrollView android:id="@+id/ScrollView01" android:layout_height="wrap_content" android:layout_width="fill_parent"><LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="fill_parent" android:layout_gravity="center" android:gravity="center"><LinearLayout android:layout_height="wrap_content" android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_marginLeft="15dip" android:layout_marginRight="15dip" android:layout_margin="20dip" android:layout_marginTop="20dip">
		<RadioGroup android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/mail_radio_group">
			<RadioButton android:id="@+id/histryradio" android:text="@string/last_address" android:textColor="@color/brown" android:checked="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="18sp" android:typeface="serif" android:layout_marginBottom="5dp" android:layout_marginTop="5dp" android:paddingRight="5dp"></RadioButton>
			<RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/contactradio" android:text="@string/select_contact" android:textColor="@color/brown" android:textSize="18sp" android:typeface="serif" android:layout_marginBottom="5dp" android:layout_marginTop="5dp" android:paddingRight="5dp"></RadioButton>
		<RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/directinput" android:text="@string/direct_input" android:textColor="@color/brown" android:textSize="18sp" android:typeface="serif"></RadioButton>
</RadioGroup>
	<EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginTop="10dp" android:id="@+id/input_address" android:inputType="textEmailAddress" android:visibility="gone" android:typeface="serif" android:textColor="@color/brown" android:hint="okusama@hoge.foo.com"></EditText>
</LinearLayout><LinearLayout android:layout_width="fill_parent" android:layout_height="80dip" android:weightSum="2">
		<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:gravity="center" android:layout_weight="1">
			<ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/yesbutton" android:background="@drawable/d_yes_b_stateful" />
		</LinearLayout>
		<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:gravity="center" android:layout_weight="1">
			<ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/d_cancel_b_stateful" android:id="@+id/cancelbutton" />
		</LinearLayout>
	</LinearLayout></LinearLayout>
</ScrollView>
	

</LinearLayout>